Added admob and wake lock

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp" >
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="00"
-        android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="70dp" android:textStyle="bold"/>
-   
-	<TextView
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="70dp"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="@string/actionText"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -25,13 +30,18 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minLines="2"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="@string/infoText"
-        android:textAppearance="?android:attr/textAppearanceLarge" android:minLines="2"/>
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="@string/prepareText"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -39,45 +49,52 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:minLines="2"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="@string/infoText2"
-        android:textAppearance="?android:attr/textAppearanceLarge" android:minLines="2"/>
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ProgressBar
         android:id="@+id/progressBar1"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:paddingTop="5dp"
-        android:weightSum="100">
+        android:weightSum="100" >
 
         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/startButton" 
-            android:layout_weight="70"/>
+            android:layout_weight="70"
+            android:text="@string/startButton" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/stopButton" 
-            android:layout_weight="30"/>
-
+            android:layout_weight="30"
+            android:text="@string/stopButton" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="fill_parent"
+    <com.google.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="bottom"
+        ads:adSize="BANNER"
+        ads:adUnitId="a14f7c6dffc0714"
         android:gravity="bottom"
-        android:text="Place for ads"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        ads:loadAdOnCreate="true"/>
 
 </LinearLayout>
