--- a/res/xml/prefs.xml
+++ b/res/xml/prefs.xml
@@ -6,17 +6,14 @@
 		android:defaultValue="false" />
 	<ListPreference android:entries="@array/pref_time"
 		android:title="@string/prefRemainderTitle1" android:key="prefRemainder1"
-		android:entryValues="@array/pref_time"
-		android:summary="@string/prefRemainderSummary"
+		android:entryValues="@array/pref_time" android:summary="@string/prefRemainderSummary"
 		android:defaultValue="@string/prefRemainder1DefaultValue" />
 	<ListPreference android:entries="@array/pref_time"
 		android:title="@string/prefRemainderTitle2" android:key="prefRemainder2"
-		android:entryValues="@array/pref_time"
-		android:summary="@string/prefRemainderSummary"
+		android:entryValues="@array/pref_time" android:summary="@string/prefRemainderSummary"
 		android:defaultValue="@string/prefRemainder2DefaultValue" />
 	<ListPreference android:entries="@array/pref_time"
 		android:title="@string/prefRemainderTitle3" android:key="prefRemainder3"
-		android:entryValues="@array/pref_time"
-		android:summary="@string/prefRemainderSummary"
+		android:entryValues="@array/pref_time" android:summary="@string/prefRemainderSummary"
 		android:defaultValue="@string/prefRemainder3DefaultValue" />
 </PreferenceScreen>
