--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,7 +3,8 @@
     xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/textView1"
